--- a/dist.ini
+++ b/dist.ini
@@ -3,8 +3,7 @@ author           = Dominik Schulz <dominik.schulz@gauner.org>
 license          = Perl_5
 copyright_holder = Dominik Schulz
 copyright_year   = 2012
-
-version          = 0.16
+version          = 0.24
 
 [GatherDir]
 exclude_filename = README.pod
@@ -15,6 +14,8 @@ exclude_match    = ^cover.*
 [Authority]
 [PkgVersion]
 [MetaJSON]
+
+[ExecDir]
 
 [ExtraTests]
 [PodSyntaxTests]
